# Datalog_Interpreter-CS236

./: Automaton.h  CMakeLists.txt  ColonAutomaton.cpp  ColonAutomaton.h  ColonDashAutomaton.cpp  ColonDashAutomaton.h  CommentAutomaton.cpp  CommentAutomaton.h  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  Graph.cpp  Graph.h  Header.h  IdentifierAutomaton.cpp  IdentifierAutomaton.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  MatcherAutomaton.cpp  MatcherAutomaton.h  Node.h  Parameter.h  Parser.cpp  Parser.h  Predicate.cpp  Predicate.h  Relation.cpp  Relation.h  Rule.cpp  Rule.h  Scheme.h  StringAutomaton.cpp  StringAutomaton.h  Token.cpp  Token.h  Tuple.h  main.cpp
